<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarDatos"
    >
    <TextView
        android:id="@+id/titulo2"
        android:theme="@style/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulo"/>
    <TextView
        android:theme="@style/Texto"
        android:id="@+id/nombreComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notValue"/>
    <TextView
        android:theme="@style/Texto"
        android:id="@+id/fechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notValue"/>
    <TextView
        android:theme="@style/Texto"
        android:id="@+id/tele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notValue"/>
    <TextView
        android:theme="@style/Texto"
        android:id="@+id/emails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notValue"/>
    <TextView
        android:theme="@style/Texto"
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notValue" />
    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/boton1"
        android:theme="@style/MiBoton"/>


</LinearLayout>
